Fix spacing on petition cards when resizing

--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -211,45 +211,45 @@ ul {
 
   li {
     display: inline-block;
-    margin: 40px 0;
+    margin: 40px 20px;
     width: 350px;
     // width: calc(33% - 40px - 1px);
     // height: 300px;
 
-    &:nth-of-type(3n+2) {
-      margin: 0 40px;
-    }
+    // &:nth-of-type(3n+2) {
+    //   margin: 0 40px;
+    // }
   }
 
-  @media (max-width: $break-large) {
-    li {
-      //width: 400px;
-      // width: calc(40% - 40px - 1px);
-      // height: 400px;
-
-      &:nth-of-type(3n+2) {
-        margin-left: 0px;
-        margin-right: 0px;
-      }
-
-      &:nth-of-type(odd) {
-        margin-right: 40px;
-      }
-    }
-  }
-
-  @media (max-width: $break-large) {
-    li {
-      //width: 400px;
-      // height: 400px;
-      margin-left: auto;
-      margin-right: auto;
-
-      &:nth-of-type(odd) {
-        margin-right: auto;
-      }
-    }
-  }
+  // @media (max-width: $break-large) {
+  //   li {
+  //     //width: 400px;
+  //     // width: calc(40% - 40px - 1px);
+  //     // height: 400px;
+  //
+  //     &:nth-of-type(3n+2) {
+  //       margin-left: 0px;
+  //       margin-right: 0px;
+  //     }
+  //
+  //     &:nth-of-type(odd) {
+  //       margin-right: 40px;
+  //     }
+  //   }
+  // }
+  //
+  // @media (max-width: $break-large) {
+  //   li {
+  //     //width: 400px;
+  //     // height: 400px;
+  //     margin-left: auto;
+  //     margin-right: auto;
+  //
+  //     &:nth-of-type(odd) {
+  //       margin-right: auto;
+  //     }
+  //   }
+  // }
 }
 
 .card:hover {
